--- a/VRChat/63/1264363.html
+++ b/VRChat/63/1264363.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "77Ser4DkiSN+Nqm0X7mO4uNzmKpEo1oQcAWG1U0y+yY="></script>
+    "TJOcMhnclHMW7VHzLhaCim4bnX4D/O8F42RXkCMpNdA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバー・ネジ","description":"サイバー・ネジ紹介文\n■概要\nボクセル製のネジにSubstance Painterで塗ったサイバーなネジです。\nサブスタボクセルの可能性を広げて行きたいのでサブスタのデータなども同梱しています。\n青い光が流れるサイバーチックなネジとノーマルな普通ネジを同梱しています。\n頭に刺したり手に持たせたりご活用ください。\n------------------------------\n●商品内容●\n\n★サイバー・ネジ　内容物\n・Substance Painter用データ\n・VOX形式データ\n・unithy package\n\nモデル仕様\n本体：(kugi.FBX)\n△35512\nテクスチャサイズ：2048ピクセル平方\n\n作成者：sunawo\nTwitter：@sunawo56\n------------------------------\n制定日 2019/03/07\n\nこのモデルを購入した時点で利用規約に同意したものとします。\nまた、この規約は予告なく変更される場合があります。\n\n・禁止事項\n同封している3Dモデル、テクスチャを含んだデータの配布、販売はすべて禁止します。\n\n\nゲームやアニメーション、動画、個人使用目的でのVRMの作成などでの使用や改変などはすべて大丈夫です。\n\n免責事項\n本モデルを利用することで発生したトラブルや損害に対して制作者sunawoは一切責任を負いません。ご了承ください。\n\nまた、このモデルを改変したものの著作権はすべて制作者本人に帰属します。","url":"https://booth.pm/ja/items/1264363","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/5a1d9873-37ec-41a0-948d-cba2fd6905b1/i/1264363/24d3c657-f071-41c4-9100-c1c6d6ca1310_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="77Ser4DkiSN+Nqm0X7mO4uNzmKpEo1oQcAWG1U0y+yY="></script>
+    nonce="TJOcMhnclHMW7VHzLhaCim4bnX4D/O8F42RXkCMpNdA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -433,9 +433,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
