--- a/VRChat/95/1264595.html
+++ b/VRChat/95/1264595.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UkYS0Xc17OwLTlQnUT5fVJ40pulgC0cQ/xlO1BMgsj0="></script>
+    "meUZHEqYZ3E9bq5PbsMMGD/xq4a8IQuD0I5/9JqTiGU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コピー系エディタ3種","description":"グリッド配置と同心円状配置とらせん状配置ができるUnity拡張エディタです\nVケット2\nバーチャルミュージアムB-E11にて使用して配置したものが演出付きで展示してあります\n\n説明書を仮で追加しました","url":"https://booth.pm/ja/items/1264595","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c241843d-afb1-4746-a472-f51bc3de2d83/i/1264595/6bfd467a-70d2-4cab-9b15-7056bd1328d8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UkYS0Xc17OwLTlQnUT5fVJ40pulgC0cQ/xlO1BMgsj0="></script>
+    nonce="meUZHEqYZ3E9bq5PbsMMGD/xq4a8IQuD0I5/9JqTiGU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
