--- a/VRChat/19/1264919.html
+++ b/VRChat/19/1264919.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "u3pjh4Vum9BsUZ5/Itag3KaSp6nTH8dcvfECLtoCM0E="></script>
+    "PI0xrI5K0VQasVkhzCK6+eeGosdWgIK1T9iyZOuo/eo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定 ケモノアバター　『ルナール』","description":"製作者：キウィー\n\n概要\n本モデルはVRChatでの使用を想定したメスのキツネ獣人のオリジナルモデル『ルナール』です。\nUnityのHumanoid形式に対応しております。\nVRChat以外での利用も可能です。詳しくは利用規約をお読みください。\n\nVRChat向けにセットアップしたUnity Packageを同梱しています。\n予めVRCSDKと、必要に応じてDynamicBoneをインポートしておくことですぐにVRChatにアップロードが可能です。","url":"https://booth.pm/ja/items/1264919","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/e1cb2816-75d6-4f1f-9f88-6087b87ed648/i/1264919/73fcd642-ebcc-4786-9929-866e4cd87dd9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="u3pjh4Vum9BsUZ5/Itag3KaSp6nTH8dcvfECLtoCM0E="></script>
+    nonce="PI0xrI5K0VQasVkhzCK6+eeGosdWgIK1T9iyZOuo/eo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -498,9 +498,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
