--- a/VRChat/24/1264924.html
+++ b/VRChat/24/1264924.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cDvDxizLsmnmSJh2erRsa+vgyetSAan3JOOX+Pk8QRw="></script>
+    "Ym7sJelame59WI9/aH4m8ThK8R2Xnu6NdhObWb9rojs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スクエアアカデミックキャップ(卒業式用の帽子)","description":"--------------------------------------------------------------------\n『スクエアアカデミックキャップ(卒業式用の帽子)』ver1.0 利用規約\n--------------------------------------------------------------------\n\nモデルを使う際は以下にご注意ください。\n\n--------------------------------------------------------------------\n■動作環境について\n\n推奨環境:\nWindows10(メモリ8GB)\n\n対応環境(Unityの動作環境です。):\nOS: Windows 7 SP1+, macOS 10.11+, Ubuntu 12.04+, SteamOS+\n DX10（シェーダーモデル 4.0）性能を持つグラフィックスカード\nCPU: SSE2 拡張命令セットに対応するもの\n（満たしていなくても使用可能ですが、動作の保証はありません）\n--------------------------------------------------------------------\n■モデル仕様\n\n・アークトゥーンシェーダーを使用。\n\n・Standardシェーダーを使用。\n\n・モデリングは私ではなくShiningRay様の協力です。\n\n・ダイナミックボーンを導入済みのプロジェクトでは勝手に紐が揺れるようになります。(設定済み)\nまた、ダイナミックコライダーを設定すれば、顔への衝突を防いだり、紐を手で触れたりできます。\n\n--------------------------------------------------------------------\n【注意事項】\n・特に商用利用して頂いても、どのように使われてもかまいません。ゲームや動画などにもお使いください。\n\n・このデータの二次配布や販売等の商用利用は、当方や、権利者以外は禁止となっております。\n\n・このモデルを使って起きたトラブルに関しては当方や権利者は責任を持ちません。\n\n--------------------------------------------------------------------\n■制作者について\n\n・MKT革命(テクスチャ割り当て、シェーダー値調整、ボーン作成と紐メッシュとボーンの結び付け、その他調整)\nTwitter:@68636538\nメール:nizigenjyasinmkt@gmail.com\n\n・ShiningRay(モデリング、UV展開)","url":"https://booth.pm/ja/items/1264924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1264924/59c77b55-341e-4f6e-bfc7-bf16a0b93a26_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cDvDxizLsmnmSJh2erRsa+vgyetSAan3JOOX+Pk8QRw="></script>
+    nonce="Ym7sJelame59WI9/aH4m8ThK8R2Xnu6NdhObWb9rojs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -399,9 +399,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
