--- a/VRChat/86/1264686.html
+++ b/VRChat/86/1264686.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "i/zidknU8IqkmRY0WJQnWZuHB1p/+3tS9yaI5n0+1D0="></script>
+    "kPy5Hi5jTLtBYQdRgpyT9n9Iexy+VM/3FI4NxCW4C8I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『マリー』","description":"オリジナル３Ｄモデル「マリー」商品紹介\n\nVrchatでの利用を想定した3Dモデルですがその他ゲーム、映像などにも利用できる3Dモデルです。\n\n販売開始の2019/3/8以降ちょこっとずつバージョンアップ予定です。\n合わせて価格変更も行います。","url":"https://booth.pm/ja/items/1264686","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/7a417681-593d-499c-8daf-b23e4c86aa32/i/1264686/80b296ee-45b5-4812-9dd0-775e6005a65e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i/zidknU8IqkmRY0WJQnWZuHB1p/+3tS9yaI5n0+1D0="></script>
+    nonce="kPy5Hi5jTLtBYQdRgpyT9n9Iexy+VM/3FI4NxCW4C8I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -467,9 +467,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
