--- a/VRChat/04/1264904.html
+++ b/VRChat/04/1264904.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NcWAiZFwQFwoD7nF74ohNmZEDE1IU90ULOCdFjcfn+g="></script>
+    "YJwylRKwlWScqOD3frzt0LBpND6vQ+ajPLyn/HNvack="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"簡易型卒業証書入れ","description":"VRchatでの使用を想定した調簡易型のアークトゥーンシェーダーを使った卒業証書入れです。\nUnityゲームでのアイテムや、撮影用とかにお使いください。","url":"https://booth.pm/ja/items/1264904","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/94c20b3d-fc21-4e25-9bc8-06b8eaba8e71/i/1264904/b5e4170a-8a5c-430c-955e-a425d1210460_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NcWAiZFwQFwoD7nF74ohNmZEDE1IU90ULOCdFjcfn+g="></script>
+    nonce="YJwylRKwlWScqOD3frzt0LBpND6vQ+ajPLyn/HNvack="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -424,9 +424,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
