--- a/VRChat/74/1264774.html
+++ b/VRChat/74/1264774.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QLfI3U1GbJbDtvvKn6m0hIAtxnasnq3sgLN2mtW22sk="></script>
+    "qPEnmFStGJOxI6b5yVbgK9ZAKtBCph9Z8oOdPmSqO7k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Ｄモデル２体セット】灯夜＆灯花","description":"【重要】\nUnity2018へのアップデートに伴い、本商品の更新、サポートを終了いたします。\n\n現状、特に問題なくUnity2018およびVRChatで動作することを確認しておりますが、今後のVrchatのアップデートやIKの変更に伴い不具合が発生する可能性もございます。\n\n購入の前に、下記試着ワールドでの確認をよろしくおねがいします。\n\n【試着について】\nアバターの試着が可能です。ワールドをUPしていますので、試着を希望される方は『soroket』でワールド検索してください！\n\n【説明】\nVRChatでの利用を想定した３Dモデルの２体セットになります。\n本作品をダウンロードいただくことで、灯夜・灯花の２人がご利用いただけるようになります。\n\n利用規約を本ページにも記載しますので、ご確認の上ご購入願います。\n\n本作品はVRCHATのアバターパフォーマンスシステムに対応しており、GOOD判定になるよう調整しております。\n\n改変用に、メッシュ結合を行っていないモデルも同梱しておりますので、用途に合わせてご利用ください。\n\nまた、それぞれにUnityパッケージも作成しておりますので、モデリングの知識がない方でも本作品をご利用いただけます。\n\nUnityパッケージには、まんまるシェーダー１．３を同梱しております。\n他シェーダを利用する場合は、裏面表示が可能なシェーダーをご利用ください。\n\n外套等は、クロスを使わずウェイトにて設定しているため、腕の動かし方等によっては貫通する場合があります。\n可能な限り、VRChat上での試着の後お買い求めください。\n　※今後も可能な限り調整は続けていく予定です\n\nまた、VRChatのIKの都合上、灯花のアバターをVRモードで利用した際、肩付近が破綻するケースを確認しています。（デスクトップ、フルトラは問題なし）現在対応策を模索しておりますので、解決次第、データの差し替えを実施いたします。\n\n\n\n【内容物】\n　FBX…2種　\n　テクスチャ…2種（+AOのみ、AOなし、着色なしを同梱）\n　Unityパッケージ…2種\n\n\n【3/8追記】\n本アバターおよび、本アバターの改変を利用したVtuber活動を許可いたします。\nただし、元のキャラクターがわからないレベルでの改変の場合は、本キャラクターの改変であることを動画内で告知してください。\n\nあわせて、収益化放送等の映り込みやゲスト出演も同様に許可いたします。\nレギュラー出演する場合かつ、元のキャラクターがわからないレベルの改変である場合は、動画内で結構ですので告知して下さい。","url":"https://booth.pm/ja/items/1264774","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/741e453a-753d-417e-a2fe-ca0a1086dba3/i/1264774/e8b3c6e0-3036-4199-bbc8-527686483e3b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QLfI3U1GbJbDtvvKn6m0hIAtxnasnq3sgLN2mtW22sk="></script>
+    nonce="qPEnmFStGJOxI6b5yVbgK9ZAKtBCph9Z8oOdPmSqO7k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -802,9 +802,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
