--- a/VRChat/42/1264642.html
+++ b/VRChat/42/1264642.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Vuxdch49T6ahXyes6aMDgfhOxb6CL87gGWDctnuEU6M="></script>
+    "09Jaw1tya0FFPVah9JBONsWe7T7nzb1Y0A54UgWoH70="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dアバター『メイリー』","description":"■3Ｄアバター　アステリ魔法学園『メイリー』　v1.0.0\n\nVRChatでの使用を想定し作成したオリジナルアバターです。\n両手の代わりにぬいぐるみを操り、しゃべるのもぬいぐるみという子です。\nカラーバリエーションをあらかじめ４パターンご用意いたしました。\n\nポリゴン数：△23,316\nマテリアル数：1\nテクスチャ数：5枚\n\nシェープキーおよび、リップシンク対応\n\n※フルボディトラッキング及びデスクトップモードに関しては現在調整中となります。\n対応完了し次第、こちらにアップロードする予定となっております。\n\n※ぬいぐるみを操る動きとなっているため、以下の現象が起こる点、あらかじめご了承ください。\n・手元やメニューが隠れやすい\n・視線にぬいぐるみのパーツがかぶりやすい\n\n同梱内容\n・Readme\n・Unitypackage\n・モデルFBXデータ\n・各種テクスチャPNGデータ\n\nマテリアルは『ユニティちゃんトゥーンシェーダーVer.2.0』を使用しています。\n\nユニティちゃんトゥーンシェーダーを利用される場合は下記のライセンスに従うようにお願いします。\n【http://unity-chan.com/contents/guideline/】\n© Unity Technologies Japan/UCL\n\n利用について\n・VRChatへのアップロード可\n・編集、加工、改変可\n・商用利用可\n・クレジット表記不要\n\n禁止事項\n・素材そのままの配布、販売\n・加工したモデルデータの配布、販売\n\n更新履歴\n●ｖ1.0.0_2019/03/08\n・販売開始\n\nこのデータを使用したことによって生じた問題に関しましては、責任を負いかねます。\n自己責任でのご使用をお願い致します。\n\nその他、お気づきの点御座いましたら\n下記の連絡先までお問い合わせください。\n--------------------------------------------------------------------------\n\n■制作者\nぬるもと\n\n■BOOTHページ\nhttps://nullmoto.booth.pm/\n\n■Twitter\nhttps://twitter.com/Null_moto_","url":"https://booth.pm/ja/items/1264642","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/6b6e769f-e106-4116-9c79-b5a7cd46240d/i/1264642/ce0bdff1-ab6e-4bba-a80f-530a74231598_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Vuxdch49T6ahXyes6aMDgfhOxb6CL87gGWDctnuEU6M="></script>
+    nonce="09Jaw1tya0FFPVah9JBONsWe7T7nzb1Y0A54UgWoH70="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -465,9 +465,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
