--- a/VRChat/19/1264519.html
+++ b/VRChat/19/1264519.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lGpYtLxutTIpg2coxFNvONE9zJrYxP7il4fDMm7WOvI="></script>
+    "O/D7G4xlPwfd2GIZ0vZCHT0ncWm2ASDQrcqFVE9tKzc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KTNヘルメット","description":"内容\nサイバーパンク感あふれる狐ヘルメットです。\nローポリモデルで作成しているので、ゲームやVRChatで、使用してください。\n\n＝＝＝＝＝＝＝構成＝＝＝＝＝＝＝＝＝\nKTN.zip\n|-KTN_MET\t\t[FBXファイル][Tris:664][Faces:340][Verts:370]\n|-cyberpunk\t\t[フォルダ]\n|    |-cyberpunk \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-army\t\t\t[フォルダ]\n|    |-army\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n|    |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n|-sf\t\t\t[フォルダ]\n     |-sf\t \t[Unity Package file][Unity 2017.4.15f1より出力]\n     |-Texture4種\t[Color, Emission, Metaric, Normal][4096x4096][png]\n\n\n\n\n＝＝＝＝＝＝＝＝作者＝＝＝＝＝＝＝\n名前　のしし\n\n[バーチャルマーケット2]\n参加：FutureTerminalA　\n紙綴機　代表　のびるホチキス\nhttps://nobiruhochikisu.booth.pm\n\n[Twitter]\nhttps://twitter.com/noshishi4\n\n[VRChat]\nNOSHISHI\n\n＝＝＝＝＝＝＝利用規約＝＝＝＝＝＝＝＝\n本データを購入した時点で以下の利用規約をに同意したとみなします。\n[禁止及び要相談]\n・本データおよび改変データを購入者以外が使用可能な状態にすることを許可しない。\n・上記より、本データおよび改変データの無許可配布、販売は許可しない。\n\n[許可]\n・本データおよび改変データをデータ再利用できない形で、アプリケーションおよびゲームなどに使用することを有償、無償にかかわらず許可する。\n\n・本データおよび改変データを使用した動画撮影および放送は有償、無償にかかわらず許可する。\n\n・R-18、R-18Gへの利用を許可する。\n\n・データおよび改変データに対して、クレジット表記を省略、省くことを許可する。\n\n[免責]\n・本データを含むあらゆるデータを利用することで、利用者が受ける損害および被害に関し、作者はいかなる保証も致しません。\n・本データを含むあらゆるデータを利用することで、利用者が他者に損害および被害を与えた場合は、その責任及び損害は当該利用者にあるものとし、作者は一切責任を負いません。","url":"https://booth.pm/ja/items/1264519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/5990ded3-4033-4ce9-b375-f814c7720746/i/1264519/69710c93-87dc-46ee-9b08-c4ecd7ce7bb2_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lGpYtLxutTIpg2coxFNvONE9zJrYxP7il4fDMm7WOvI="></script>
+    nonce="O/D7G4xlPwfd2GIZ0vZCHT0ncWm2ASDQrcqFVE9tKzc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
