--- a/VRChat/24/1263124.html
+++ b/VRChat/24/1263124.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2uH4gq31fgvYzwyeQDAKZsZbC7A+vYZdpM5cianuRek="></script>
+    "t67XFRsNXUf6aNz+WjpaVEfZf1JHramwazfz0rkQnzk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まわしぐるま","description":"# 概要\nハムスターが中に入ってくるくる回るアレです。\nVRChatのワールドに置いてもらうことを想定しています。\n作者は以下のワールドに置いています。\n[Hamster cage](https://twitter.com/Whisky_shusuky/status/1019596161231908866)\n[Space mass cat](https://twitter.com/Whisky_shusuky/status/1102108185119219712)\n\nアニメーターが仕込んであり、端に立つとくるくる回りはじめます。VRC SDKがインストールされたプロジェクトにインポートして、vket_hamster_wheelのprefabをHierarchyに置けば動作します。\nジッサイに回る様子は上記の動画の43秒頃で確認できます。\n\nハムスター好き、子年生まれの人、ねずみさんなどなどにオススメです。\n\n\n# 利用規約\nMIT ライセンスになります。\n\nVRChatのワールド作成に使用することを想定して作成しましたがアバターに使っていただいても何に使って頂いても結構です！\n改変も自由ですし、改変したものを再配布するのも自由です！\n\n\n# その他\n使用された場合は作者のツイッターアカウント(@Whisky_shusuky)にメンションを飛ばして頂けたら嬉しいです。作者のモチベーションが湧きます。","url":"https://booth.pm/ja/items/1263124","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4a07c950-ffd7-4204-88b0-affb6de12677/i/1263124/bb26fba9-06dd-4af8-b803-25de85455fc9_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2uH4gq31fgvYzwyeQDAKZsZbC7A+vYZdpM5cianuRek="></script>
+    nonce="t67XFRsNXUf6aNz+WjpaVEfZf1JHramwazfz0rkQnzk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -398,9 +398,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
